template/cloudformer.template.VPC-intro-step02.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc9bcf39fe": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPC領域"
          }
        ]
      }
    },
    "subnet2eb14759": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc9bcf39fe"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックサブネット"
          }
        ]
      }
    },
    "igw55819b37": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "rtbb332c1d6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc9bcf39fe"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックルートテーブル"
          }
        ]
      }
    },
    "gw3": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc9bcf39fe"
        },
        "InternetGatewayId": {
          "Ref": "igw55819b37"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbb332c1d6"
        },
        "SubnetId": {
          "Ref": "subnet2eb14759"
        }
      }
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbb332c1d6"
        },
        "GatewayId": {
          "Ref": "igw55819b37"
        }
      },
      "DependsOn": "gw3"
    },
    "instanceif16929e8": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-35072834",
        "InstanceType": "t2.micro",
        "KeyName": "my-key",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Webサーバー"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet2eb14759"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.10",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgWEBSG"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "sgWEBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "WEB-SG",
        "VpcId": {
          "Ref": "vpc9bcf39fe"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  },
  "Description": "VPC-intro-step02"
}
