template/cloudformer.template.VPC-intro-step03.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc3ecd3b5b": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPC領域"
          }
        ]
      }
    },
    "subnetdebf49a9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックサブネット"
          }
        ]
      }
    },
    "igw7a869c18": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "doptcda2b3af": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ap-northeast-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "rtb1330c376": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックルートテーブル"
          }
        ]
      }
    },
    "instanceia56e2ebc": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-35072834",
        "InstanceType": "t2.micro",
        "KeyName": "my-key",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Webサーバー"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnetdebf49a9"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.10",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgVPCintrosgWEBSG1G90L9V7J9MPB"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "sgVPCintrosgWEBSG1G90L9V7J9MPB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "launch-wizard-1 created 2014-10-02T15:14:33.700+09:00",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "gw4": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "InternetGatewayId": {
          "Ref": "igw7a869c18"
        }
      }
    },
    "subnetroute4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb1330c376"
        },
        "SubnetId": {
          "Ref": "subnetdebf49a9"
        }
      }
    },
    "route3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb1330c376"
        },
        "GatewayId": {
          "Ref": "igw7a869c18"
        }
      },
      "DependsOn": "gw4"
    },
    "dchpassoc4": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "DhcpOptionsId": {
          "Ref": "doptcda2b3af"
        }
      }
    }
  },
  "Description": "VPC-intro-step03"
}
