template/cloudformer.template.VPC-intro-step05.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc3ecd3b5b": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPC領域"
          }
        ]
      }
    },
    "subnetdebf49a9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックサブネット"
          }
        ]
      }
    },
    "subnetbbbd4bcc": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "プライベートサブネット"
          }
        ]
      }
    },
    "igw7a869c18": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "rtb1430c371": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "プライベートルートテーブル"
          }
        ]
      }
    },
    "rtb1330c376": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "パブリックルートテーブル"
          }
        ]
      }
    },
    "gw6": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "InternetGatewayId": {
          "Ref": "igw7a869c18"
        }
      }
    },
    "subnetroute8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb1330c376"
        },
        "SubnetId": {
          "Ref": "subnetdebf49a9"
        }
      }
    },
    "route5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb1430c371"
        },
        "InstanceId": {
          "Ref": "instanceie680c0ff"
        }
      }
    },
    "route6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb1330c376"
        },
        "GatewayId": {
          "Ref": "igw7a869c18"
        }
      },
      "DependsOn": "gw6"
    },
    "instanceie680c0ff": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-31c29e30",
        "InstanceType": "t1.micro",
        "KernelId": "aki-176bf516",
        "KeyName": "my-key",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NATサーバ"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnetdebf49a9"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.20",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgNATSG"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instanceia56e2ebc": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-35072834",
        "InstanceType": "t2.micro",
        "KeyName": "my-key",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Webサーバー"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnetdebf49a9"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.10",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgVPCintrosgWEBSG1G90L9V7J9MPB"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instancei4a783853": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-35072834",
        "InstanceType": "t2.micro",
        "KeyName": "my-key",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBサーバ"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnetbbbd4bcc"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.2.10",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgDBSG"
              }
            ]
          }
        ]
      }
    },
    "sgNATSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NAT Security Group",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "10.0.1.10/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "sgDBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "DB-SG",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "3306",
            "ToPort": "3306",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "sgVPCintrosgWEBSG1G90L9V7J9MPB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Web-SG",
        "VpcId": {
          "Ref": "vpc3ecd3b5b"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  },
  "Description": "VPC-intro-step05"
}
